@@ -97,7 +97,7 @@ public class ArrayIterateTest
     {
         Double[] objectArray = {(double) 1, (double) 2, (double) 3};
         assertEquals(
-                new Double(1 + 1 + 2 + 3),
+                Double.valueOf(1 + 1 + 2 + 3),
                 ArrayIterate.injectInto((double) 1, objectArray, AddFunction.DOUBLE));
     }
 
